<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <Button
            android:id="@+id/buttonPauseGame"
            android:text="@string/pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/typesGame"
    />
    <Button
            android:text="@string/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonExitGame"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/levelGame"
    />
    <TextView
            android:id="@+id/nGame"
            android:text="@string/n_setting"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
    />
    <TextView
            android:id="@+id/levelGame"
            android:text="@string/level_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/nGame"
            app:layout_constraintEnd_toStartOf="@+id/nGame"
    />
    <TextView
            android:id="@+id/typesGame"
            android:text="@string/types_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/nGame"
            app:layout_constraintStart_toEndOf="@+id/nGame"
    />
    <TextView
            android:id="@+id/totalCorrect"
            android:text="@string/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/levelGame"
            app:layout_constraintEnd_toEndOf="parent"
    />
    <TextView
            android:id="@+id/textCT"
            android:text="@string/correct_total"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/totalCorrect"
            app:layout_constraintBottom_toBottomOf="@+id/totalCorrect"
            app:layout_constraintTop_toTopOf="@+id/totalCorrect"
    />
    <TextView
            android:id="@+id/life"
            android:text="@string/lives"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/totalCorrect"
            app:layout_constraintBottom_toBottomOf="@+id/totalCorrect"
    />
    <Button
            android:id="@+id/buttonNorthWest"
            android:textSize="50sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toStartOf="@+id/buttonNorth"
            app:layout_constraintTop_toBottomOf="@+id/totalCorrect"
            android:background="@color/buttonTrans"
    />
    <Button
            android:id="@+id/buttonNorth"
            android:textSize="50sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/totalCorrect"
            android:background="@color/buttonTrans"
    />
    <Button
            android:id="@+id/buttonNorthEast"
            android:textSize="50sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:background="@color/buttonTrans"
            app:layout_constraintStart_toEndOf="@+id/buttonNorth"
            app:layout_constraintTop_toBottomOf="@+id/totalCorrect"
    />

    <Button
            android:id="@+id/buttonWest"
            android:textSize="50sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/buttonTrans"
            app:layout_constraintEnd_toStartOf="@+id/buttonCenter"
            app:layout_constraintTop_toBottomOf="@+id/buttonNorthWest"/>
    <Button
            android:id="@+id/buttonCenter"
            android:textSize="50sp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/buttonTrans"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonNorth"
    />
    <Button
            android:id="@+id/buttonEast"
            android:textSize="50sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/buttonTrans"
            app:layout_constraintStart_toEndOf="@+id/buttonCenter"
            app:layout_constraintTop_toBottomOf="@+id/buttonNorthEast"
    />
    <Button
            android:id="@+id/buttonSouthWest"
            android:textSize="50sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/buttonTrans"
            app:layout_constraintTop_toBottomOf="@+id/buttonWest"
            app:layout_constraintEnd_toStartOf="@+id/buttonSouth"
    />
    <Button
            android:id="@+id/buttonSouth"
            android:textSize="50sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/buttonTrans"
            app:layout_constraintTop_toBottomOf="@+id/buttonCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    />
    <Button
            android:id="@+id/buttonSouthEast"
            android:textSize="50sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:background="@color/buttonTrans"
            app:layout_constraintTop_toBottomOf="@+id/buttonEast"
            app:layout_constraintStart_toEndOf="@+id/buttonSouth"
    />
    <Button
            android:id="@+id/buttonPosition"
            android:text="@string/button_position"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:background="@color/buttonDark"
            app:layout_constraintBottom_toTopOf="@+id/buttonColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonSouthWest"
    />
    <Button
            android:id="@+id/buttonLetter"
            android:text="@string/button_letter"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="16dp"
            android:background="@color/buttonDark"
            app:layout_constraintBottom_toTopOf="@+id/buttonShape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonSouthEast"
    />
    <Button
            android:id="@+id/buttonColor"
            android:text="@string/button_color"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@color/buttonDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/buttonPosition"
    />
    <Button
            android:id="@+id/buttonShape"
            android:text="@string/button_shape"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@color/buttonDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/buttonLetter"
    />
</androidx.constraintlayout.widget.ConstraintLayout>
