<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:id="@+id/settingTextView"
            android:text="@string/my_settings"
            android:textSize="36sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    />

    <TextView
            android:id="@+id/levelSettingText"
            android:text="@string/level_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/typesSettingText"
            android:textSize="30sp"
    />

    <Button
            android:id="@+id/levelUpButton"
            android:text="@string/plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/levelSettingText"
            app:layout_constraintTop_toTopOf="@+id/levelSettingText"/>
    <Button
            android:id="@+id/levelUUpButton"
            android:text="@string/pplus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/levelUpButton"
    />

    <Button
            android:id="@+id/levelDownButton"
            android:text="@string/minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="@+id/levelSettingText"
            app:layout_constraintBottom_toBottomOf="@+id/levelSettingText"
    />
    <Button
            android:id="@+id/levelDDownButton"
            android:text="@string/mminus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="12dp"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/levelDownButton"
    />

    <TextView
            android:id="@+id/typesSettingText"
            android:text="@string/types_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/nSettingText"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="32dp"
            android:textSize="30sp"
    />

    <Button
            android:id="@+id/typesDonwButton"
            android:text="@string/minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/typesSettingText"
            app:layout_constraintTop_toTopOf="@+id/typesSettingText"
    />

    <Button
            android:id="@+id/typesUpButton"
            android:text="@string/plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="@+id/typesSettingText"
            app:layout_constraintBottom_toBottomOf="@+id/typesSettingText"
    />

    <Button
            android:id="@+id/nDownButton"
            android:text="@string/minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/nSettingText"
            app:layout_constraintTop_toTopOf="@+id/nSettingText"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            android:textSize="24sp"
    />

    <Button
            android:id="@+id/nUpButton"
            android:text="@string/plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/nSettingText"
            app:layout_constraintTop_toTopOf="@+id/nSettingText"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"
            android:textSize="24sp"
    />

    <TextView
            android:id="@+id/nSettingText"
            android:text="@string/n_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="30sp"
    />
    <TextView
            android:id="@+id/livesSettingText"
            android:text="@string/lives_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/nSettingText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="30sp"
    />
    <Button
            android:id="@+id/livesDownButton"
            android:text="@string/minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="@+id/livesSettingText"
            app:layout_constraintBottom_toBottomOf="@+id/livesSettingText"
    />
    <Button
            android:id="@+id/livesUpButton"
            android:text="@string/plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="@+id/livesSettingText"
            app:layout_constraintBottom_toBottomOf="@+id/livesSettingText"
    />
    <Button
            android:id="@+id/livesUUpButton"
            android:text="@string/pplus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/livesUpButton"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"
            android:textSize="24sp"
    />
    <Button
            android:id="@+id/livesDDownButton"
            android:text="@string/mminus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/livesDownButton"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            android:textSize="24sp"
    />
    <Button
            android:id="@+id/highScoreButton"
            android:text="@string/high_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toTopOf="@+id/startButton"
            app:layout_constraintBottom_toBottomOf="@+id/startButton"
            android:textSize="12sp"
    />
    <Button
            android:id="@+id/startButton"
            android:text="@string/start_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/linearBottom2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="12dp"
            android:textSize="18sp"
    />
    <Button
            android:id="@+id/exitAllButton"
            android:text="@string/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"
            app:layout_constraintTop_toTopOf="@+id/startButton"
            app:layout_constraintBottom_toBottomOf="@+id/startButton"
            android:textSize="18sp"
    />

    <LinearLayout
            android:id="@+id/linearBottom2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="16dp"
            app:layout_constraintBottom_toTopOf="@+id/linearBottom"
            android:layout_marginBottom="4dp"
    >
        <TextView
                android:id="@+id/recd6"
                android:text="@string/recd"
                android:textSize="12sp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
        />
        <TextView
                android:id="@+id/recd5"
                android:text="@string/recd"
                android:textSize="12sp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
        />
        <TextView
                android:id="@+id/recd4"
                android:text="@string/recd"
                android:textSize="12sp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
        />
        <TextView
                android:id="@+id/recd3"
                android:text="@string/recd"
                android:textSize="12sp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
        />
        <TextView
                android:id="@+id/recd2"
                android:text="@string/recd"
                android:textSize="12sp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
        />
        <TextView
                android:id="@+id/recd1"
                android:text="@string/recd"
                android:textSize="12sp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
        />
        <TextView
                android:id="@+id/recd0"
                android:text="@string/recd"
                android:textSize="12sp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/buttonOn"
        />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/linearBottom"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
    >
        <TextView
                android:id="@+id/rec6"
                android:text="@string/rec"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/frame_style_1"
        />
        <TextView
                android:id="@+id/rec5"
                android:text="@string/rec"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/frame_style_1"
        />
        <TextView
                android:id="@+id/rec4"
                android:text="@string/rec"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/frame_style_1"
        />
        <TextView
                android:id="@+id/rec3"
                android:text="@string/rec"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/frame_style_1"
        />
        <TextView
                android:id="@+id/rec2"
                android:text="@string/rec"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/frame_style_1"
        />
        <TextView
                android:id="@+id/rec1"
                android:text="@string/rec"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/frame_style_1"
        />
        <TextView
                android:id="@+id/rec0"
                android:text="@string/rec"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/frame_style_2"
        />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
